[package]
name = "get"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
colored = { version = "2.2.0" }
form_urlencoded = "1.2.1"
homedir = "0.3.4"
http = "1.2.0"
hyper = "1.5.2"
nom = "7.1.3"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
